finished home page

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html,
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7em;
-  color: #edfffe;
 }
 a {
   text-decoration: none;
@@ -24,14 +23,61 @@ h3 {
 p {
   margin: 10px 0;
 }
-
-/* navbar */
+/* utilities */
 .container {
   margin: auto;
-  max-width: 960px;
+  max-width: 1100px;
   overflow: auto;
   padding: 0 20px;
 }
+
+.text-primary {
+  color: #85fff8;
+}
+.lead {
+  font-size: 20px;
+  /* line-height: 1.5em; */
+}
+.btn {
+  display: inline-block;
+  border: none;
+  font-size: 18px;
+  color: #fff;
+  background: #333;
+  padding: 13px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #85fff8;
+  color: #000000;
+}
+.btn-light {
+  background-color: #85fff8;
+  color: #000000;
+}
+.btn-light:hover {
+  background-color: #7cecf0;
+  color: #000000;
+}
+.bg-dark {
+  background-color: #333;
+  color: #f4f4f4;
+}
+.bg-primary {
+  background-color: #85fff8;
+  color: #000000;
+}
+.bg-light {
+  background-color: #f4f4f4;
+  color: #000000;
+}
+.clr {
+  clear: both;
+}
+
+/* navbar */
+
 #navbar {
   background-color: #081918;
   color: #fff;
@@ -42,9 +88,9 @@ p {
   font-variant: small-caps;
 }
 #navbar .logo {
-  margin-top: 10px;
+  /* margin-top: 10px; */
   float: left;
-  padding: 10px;
+  padding: 18px;
   border: 2px solid #fff;
   border-radius: 15px;
   /* background-color: #000000; */
@@ -79,9 +125,60 @@ p {
 /* } */
 /* showcase */
 #showcase {
-  background-image: url(./IMG/showcase.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  height: 700px;
+  background: url(./IMG/showcase.jpg) no-repeat center center/cover;
+  height: 600px;
+
+  /* border: 5px solid red; */
+}
+#showcase #showcase-content {
+  color: #fff;
+  text-align: center;
+  padding-top: 170px;
+}
+
+#showcase #showcase-content h1 {
+  font-size: 60px;
+  line-height: 1.2em;
+}
+#showcase #showcase-content p {
+  line-height: 1.7em;
+  padding-bottom: 20px;
+}
+/* home info */
+#home-info {
+  height: 400px;
+}
+
+#home-info #info-img {
+  float: left;
+  width: 50%;
+  background: url("./IMG/photo-1.jpg") no-repeat;
+  min-height: 100%;
+}
+#home-info #info-content {
+  float: right;
+  width: 50%;
+  text-align: center;
+  padding: 70px 30px;
+  overflow: hidden;
+}
+#home-info #info-content p {
+  padding-bottom: 30px;
+}
+.box {
+  float: left;
+  width: 33.3%;
+  padding: 50px;
+  height: 350px;
+  text-align: center;
+}
+.box i {
+  margin-bottom: 13px;
+}
+/* footer */
+#main-footer {
+  background-color: #333;
+  text-align: center;
+  color: #f4f4f4;
+  padding: 20px;
 }
